package Model;

public  class AccelerationComponent {
    protected double ax;
    protected double ay;
    protected double az;
}
